# ReadRSS

./: .gitignore  001_create_tables.sql  Cargo.toml  README.md  README.txt  service.rs  storage.rs  sync.rs
.cargo/: audit.toml  config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: Guide_technique_ReadRSS.md  RECAP_AMELIORATIONS.md  packaging.md  plan_travail.md  qa_checklist.md  recap_2025-10-28.md  recapitulatif_actions.md
rss-core/: Cargo.toml
rss-core/src/: config.rs  data.rs  error.rs  feed.rs  lib.rs  models.rs  poller.rs  service.rs  storage.rs
rss-core/tests/: corruption_fallback_tests.rs  data_api_tests.rs  poller_runtime_test.rs  poller_tests.rs
rss-gui/: Cargo.toml
rss-gui/src/: app.rs  app_backup.rs  main.rs  webview.rs
scripts/: build_deb.sh  build_release.sh
