[workspace]
members = [
    "rss-core",
    "rss-gui"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.metadata]
description = "Rust RSS reader with background polling service and GUI frontend"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
eframe = { version = "0.27", default-features = false, features = ["wgpu", "wayland", "x11"] }
egui = "0.27"
webbrowser = "0.8"
dirs = "5"
atom_syndication = "0.12"
url = "2"
html2text = "0.11"
futures-util = "0.3"
bytes = "1"
wry = "0.43"

