[package]
name = "rss-core"
version = "0.1.0"
edition = "2021"
description = "Core background services and feed management for the RSS reader"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rss = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
atom_syndication = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs"] }
rss = { workspace = true }
