[package]
name = "rss-core"
version = "0.1.0"
edition = "2021"
description = "Core background services and feed management for the RSS reader"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
rss = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = "5.0"
egui = { workspace = true }
tracing = { workspace = true }
atom_syndication = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs"] }
rss = { workspace = true }
