[package]
name = "rss-gui"
version = "0.1.0"
edition = "2021"
description = "Graphical frontend for the RSS reader"
license = "MIT"

[dependencies]
egui = { workspace = true }
rss-core = { path = "../rss-core" }
tokio = { workspace = true }
eframe = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
webbrowser = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
html2text = { workspace = true }
