[package]
name = "rss-gui"
version = "0.1.0"
edition = "2021"
description = "Graphical frontend for the RSS reader"
license = "MIT"

[dependencies]
egui = { workspace = true }
rss-core = { path = "../rss-core" }
tokio = { workspace = true }
eframe = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
webbrowser = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
html2text = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
fontdb = "0.16"

[features]
default = []

[package.metadata.deb]
maintainer = "ReadRSS Maintainers <maintainers@example.com>"
copyright = "2025"
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
	["target/release/rss-gui", "/usr/bin/readrss", "755"],
	["README.md", "/usr/share/doc/readrss/README.md", "644"],
]
extended-description = "Lecteur RSS en Rust avec service de polling et interface graphique minimaliste (egui)."




